--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/send_email
-    username: postgres
-    password: postgres@123
   jpa:
-    hibernate:
-      ddl-auto: update
+    show-sql: true
+    hibernate.ddl-auto: create
+    properties.hibernate.dialect: org.hibernate.dialect.HSQLDialect
+    database: HSQL
+  datasource:
+    driverClassName: org.hsqldb.jdbcDriver
+    url: jdbc:hsqldb:mem:auth
+    username: sa    
