add send email service

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,9 @@
+sendemail:
+  service:
+    mailgun:
+      serviceEndpoint: ${MAILGUN_URI}
+      mailgunKey: ${MAILGUN_KEY}
+      mailgunDomain: ${MAILGUN_DOMAIN}
 spring:
   datasource:
     url: ${POSTGRES_URI}
