--- a/src/main/resources/application-it.yml
+++ b/src/main/resources/application-it.yml
@@ -1,13 +1,11 @@
+it.test.email:
 spring:
   jpa:
     show-sql: true
     hibernate.ddl-auto: create
     properties.hibernate.dialect: org.hibernate.dialect.HSQLDialect
     database: HSQL
-
   datasource:
     driverClassName: org.hsqldb.jdbcDriver
     url: jdbc:hsqldb:mem:auth
     username: sa
-    
-    
