--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,9 +6,9 @@ sendemail:
       mailgunDomain: ${MAILGUN_DOMAIN}
 spring:
   datasource:
-    url: ${POSTGRES_URI}
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASS}
+    url: ${POSTGRE_URI}
+    username: ${POSTGRE_USER}
+    password: ${POSTGRE_PASS}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: update    
