--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,8 @@
-sendemail:
-  service:
-    mailgun:
-      serviceEndpoint: https://api:#key@api.mailgun.net/v3/#domain_name/messages
-      mailgunKey: 123
-      mailgunDomain: 123
 spring:
-  jpa:
-    show-sql: true
-    hibernate.ddl-auto: create
-    properties.hibernate.dialect: org.hibernate.dialect.HSQLDialect
-    database: HSQL
   datasource:
-    driverClassName: org.hsqldb.jdbcDriver
-    url: jdbc:hsqldb:mem:auth
-    username: sa
+    url: jdbc:postgresql://localhost:5432/send_email
+    username: postgres
+    password: postgres@123
+  jpa:
+    hibernate:
+      ddl-auto: update
