--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ sendemail:
       serviceEndpoint: https://api.mailgun.net/v3/#domain_name/messages
       mailgunKey: 123
       mailgunDomain: 123
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
