--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,11 @@
 	</parent>
 
 	<properties>
+	    <skipItTest>true</skipItTest>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		
+		<skipITs>${skipItTest}</skipITs>
 	</properties>
 
 	<dependencies>
@@ -84,14 +85,12 @@
 			<version>2.5.1</version>
 		</dependency>
 
-
 		<!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>2.0-m10</version>
 		</dependency>
-
 
 		<!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured -->
 		<dependency>
