--- a/src/main/resources/application-it.yml
+++ b/src/main/resources/application-it.yml
@@ -1,3 +1,7 @@
+client:
+  service:
+    key: cecadbd7-e07c-48b2-b11d-038f7aaab4f6
+    url: api/v1/clients
 it.test.email: 
 sendemail:
   service:
