--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,8 @@
+server:
+  port: 40585
 client:
   service:
-    key: c
+    key: cecadbd7-e07c-48b2-b11d-038f7aaab4f6 
     url: api/v1/clients
 sendemail:
   service:
