--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,13 +11,13 @@ sendemail:
       mailgunKey: 123
       mailgunDomain: 123
 spring:
-  jpa:
-    show-sql: true
-    hibernate.ddl-auto: create
-    properties.hibernate.dialect: org.hibernate.dialect.HSQLDialect
-    database: HSQL
   datasource:
-    driverClassName: org.hsqldb.jdbcDriver
-    url: jdbc:hsqldb:mem:auth
-    username: sa  
-    
+    url: jdbc:postgresql://localhost:5432/send_email
+    username: postgres
+    password: initdb
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update    
