--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=local
+#spring.profiles.active=local
 user.it.email=user-it@test.com
 user.it.pass=7c30110b
 user.it.name=it user
