--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
+#
+# unused content
+#
 client:
   service:
-    key: cecadbd7-e07c-48b2-b11d-038f7aaab4f6
-    url: api/v1/clients
+    key:
+    url:
 sendemail:
   service:
     mailgun:
