update log level

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,8 +2,8 @@ logging:
   level:
     org:
       springframework:
-        web: DEBUG
-      hibernate: ERROR
+        web: INFO
+#      hibernate: ERROR
 sendemail:
   service:
     mailgun:
