update application configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,4 +23,4 @@ sendemail:
 urls:
   skip:
     host:
-      validation: api/v1/clients,api/v1/users/auth
+      validation: api/v1/clients,api/v1/users/auth,health,info,metrics
