--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -15,6 +15,10 @@ server:
   port: 40585
 
 spring:
+  cloud:
+    config:
+      url: http://config-server:8888
+      failFast: true
   application:
     name: send-email-service
   datasource:
